<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">XDAG</string>
    <string name="XDAG">XDAG</string>

    <!-- common -->
    <string name="home">Home</string>
    <string name="send">Send</string>
    <string name="receive">Receive</string>
    <string name="more">More</string>
    <string name="setting">Settings</string>
    <string name="send_xdag">Send XDAG</string>
    <string name="receive_xdag">Receive XDAG</string>
    <string name="scan">Scan QRCode</string>
    <string name="to_address">To Address</string>
    <string name="send_to_address">Send to Address</string>
    <string name="amount_to_send">Amount</string>
    <string name="amount">Amount</string>
    <string name="remark_to_send">Remark(Optional)</string>
    <string name="remark">Remark</string>
    <string name="not_ready">Not ready</string>
    <string name="create_wallet">Create Wallet</string>
    <string name="restore_wallet">Restore Wallet</string>
    <string name="no_transaction">No transaction found</string>
    <string name="copy_address">Copy Address</string>
    <string name="about">About</string>
    <string name="start_use">Start</string>
    <string name="cover">Overwrite</string>
    <string name="nice_to_meet_you">Glad to see you here!</string>
    <string name="the_function_developing_please_wait">To be continued.</string>
    <string name="continue_use">Continue</string>
    <string name="exit">Quit</string>
    <string name="switch_pool_to">Switch pool \n%1$s</string>
    <string name="tran_detail">Transaction details</string>
    <string name="warning">Warning</string>
    <string name="ensure">Confirm</string>
    <string name="available_xdag">Available %1$s XDAG</string>
    <string name="cancel">Cancel</string>
    <string name="add_pool_address">Add pool address</string>
    <string name="delete_pool_address">Delete pool address:%1$s?</string>
    <string name="reset_pool_address">Whether reset to the default pool address?</string>
    <string name="not_remind_again">Don\'t remind again</string>
    
    <!-- please -->
    <string name="please_set_password">Please set wallet password</string>
    <string name="please_retype_password">Please retype wallet password</string>
    <string name="please_input_password">Please input password</string>
    <string name="please_input_random">Please input random key</string>
    <string name="please_wait_read_wallet">Reading wallet data..</string>
    <string name="please_wait_transfer">Transfer in progress..</string>
    <string name="please_backup_your_xdag_wallet_first">Please read this carefully, and backup your wallet.</string>
    <string name="please_wait_loading">Loading in progress..</string>
    <string name="please_wait_connecting_pool">Connecting to main net..</string>
    <string name="please_restore_read">Please read this page</string>

    <!-- error tips -->
    <string name="error_cannot_identify_qr_code">Failed to identify QRCode</string>
    <string name="error_file_make_fail">Failed to create file</string>
    <string name="error_sdcard_not_available">Local storage is not available</string>
    <string name="error_create_xdag_wallet">Failed to create wallet</string>
    <string name="error_restore_xdag_wallet">Failed to restore wallet</string>
    <string name="error_backup_xdag_wallet">Failed to backup wallet</string>
    <string name="error_password">Password incorrect</string>
    <string name="error_password_not_same">Password inconsistent</string>
    <string name="error_noting_to_transfer">Amount to send must be greater than 0</string>
    <string name="error_balance_too_small">Amount not sufficient</string>
    <string name="error_invalid_recv_address">Invalid address</string>
    <string name="error_invalid_pool_address">Invalid pool address</string>
    <string name="error_pool_address_exists">Pool address already exists</string>
    <string name="error_cannot_delete_selected_pool">You cannot delete the selected pool address</string>
    <string name="error_server_problem">The server is running out of the way</string>
    <string name="error_send_coin_itself">can\'t transfer XDAG to itself</string>

    <!-- success -->
    <string name="success_refresh">Refreshed successfully</string>
    <string name="success_copy_address">Copied successfully</string>
    <string name="success_send_coin">Sent successfully</string>
    <string name="success_backup_xdag_wallet">Wallet backup is created in Documents/xdag_backup.zip </string>

    <!-- setting item-->
    <string name="more_messages">Message</string>
    <string name="more_backup_wallet">Backup wallet</string>
    <string name="more_suggest">Feedback</string>
    <string name="more_wallet">Switch wallet</string>
    <string name="more_pool">Switch pool</string>
    <string name="more_xdag_io">Community website - xdag.io</string>
    <string name="more_github">GitHub - XDagger</string>

    <!-- password format -->
    <string name="password_format">0123456789abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ@?#$_-+()/\*:;!~`|£¤€^{}[]%=,.&lt;&gt;&amp;\'\"\\</string>
    <string name="error_password_format">Please input 6 to 18 characters, numbers, or special characters</string>

    <!-- about -->
    <string name="slogan">Fluent and Stable XDAG wallet</string>
    <string name="about_explain">We are dedicated to develop a fluent and stable XDAG wallet. If you have any question or suggestion, please send us you feedback.\n\nSource code is listed on github, link is shown as below. Everyone are welcomed to contribute to this project.\n\nReminder:\n\nPlease backup your wallet files somewhere.\n\nWe saved your files in Android private folder, but backup and restore use local storage. Local storage is not safe enough for backup, please transfer your wallet backup files to somewhere else.\n\nAny uninstallation or deleting data will cause lose of wallet, and NO WAY TO RECOVER.\nPlease backup your wallet before any such operations.\n\nWE ARE NOT RESPONSIBLE FOR ANY LOSE OF ASSETS.</string>

    <!-- update -->
    <string name="update">Update</string>
    <string name="close">Close</string>
    <string name="new_version_available">New version detected：%1$s</string>

    <!-- explain-->
    <string name="usage">Usage</string>
    <string name="function_explain">Terms</string>
    <string name="backup_explain">I have read the content above</string>
    <string name="not_show_explain">Don\'t display again</string>
    <string name="restore_read_explain">I have read the content above</string>
    <string name="check_root_explain">Caution! Your device is rooted, it\'s a high risk to continue.</string>
    <string name="use_explain_1">XDAG Android wallet is still in beta version.\n</string>
    <string name="use_explain_2">Caution:\n</string>
    <string name="use_explain_3">Please backup your wallet in case of loss of wallet due to bugs.\n</string>
    <string name="use_explain_4">WE ARE NOT RESPONSIBLE FOR ANY LOSS OF ASSETS.\n</string>
    <string name="use_explain_5">Uninstalling or deleting data will cause loss of wallet, and NO WAY TO RECOVER. Please backup your wallet first.\n</string>
    <string name="use_explain_6">To ensure transactions, popups are not cancelable.\n</string>
    <string name="use_explain_7">We will improve this in later releases.</string>
    <string name="network_upgrade_0_6_1">After the XDAG 0.6.1 mainnet upgrade, this Android wallet will no longer support transfer operations. Please make sure to export the wallet backup file to your computer wallet for use.\nWallet backup path: Documents/xdag_backup.zip</string>
    <string name="restore_explain_1">Due to special data structure of XDAG, \n</string>
    <string name="restore_explain_2">XDAG wallet doesn\'t support backup or restore through private key or mnemonic code currently.\n</string>
    <string name="restore_explain_3">You can only backup and restore your wallet by files in xdag folder.\n</string>
    <string name="restore_explain_4">To restore your wallet, you have to copy your wallet files to in the same directory and compress it into a zip file, then select the zip file.\n</string>
    <string name="restore_explain_5">local storage is not a safe place for backups, any VIRUS can steal backup files from local storage.\n</string>
    <string name="restore_explain_6">When restoring a wallet, the backup is copy to Android private folder. After you restore the wallet successfully, please transfer backup files to a secure location.\n</string>
    <string name="restore_explain_7">You can backup your wallet to a local storage at any time.\n</string>
    <string name="restore_explain_8">Please keep in mind: local storage is not safe, please transfer backup files to a secure location.\n</string>
    <string name="wallet_explain_1">No wallet detected!\n</string>
    <string name="wallet_explain_2">You have two ways to get your wallet.\n</string>
    <string name="wallet_explain_3">Create a new wallet. You can create an entirely new wallet.\n</string>
    <string name="wallet_explain_4">Restore an old wallet. You can import your old wallet here.\n</string>
    <string name="wallet_explain_5">We will ask for permission to write to an external local storage, please do not deny it.\n</string>
    <string name="cover_explain">Detected that a backup exists in Documents/xdag_backup.zip，do you want to overwrite it? You will be unable to recover the old backup if you overwrite.</string>

    <!-- settings-->
    <string name="settings_show_usage">Don\'t display usage</string>
    <string name="no_file_access_permission">No file access permission!</string>

</resources>