<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/send_tv_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/space_16"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:textColor="@color/BLACK"
        android:textSize="@dimen/size_title"
        android:text="@string/to_address"/>

    <EditText
        android:id="@+id/send_et_address"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="@color/GERY"
        android:textSize="@dimen/size_text"
        android:layout_marginTop="@dimen/space_8"
        android:padding="@dimen/space_16"
        android:paddingLeft="@dimen/space_16"
        android:paddingBottom="12dp"
        android:paddingTop="12dp"
        android:background="@color/MORE_LIGHT_GERY"
        android:hint="@string/send_to_address"
        app:layout_constraintTop_toBottomOf="@id/send_tv_address"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <TextView
        android:id="@+id/send_tv_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/send_et_address"
        app:layout_constraintLeft_toLeftOf="@id/send_tv_address"
        android:layout_marginTop="32dp"
        android:textColor="@color/BLACK"
        android:textSize="@dimen/size_title"
        android:text="@string/amount_to_send"/>

    <EditText
        android:id="@+id/send_et_amount"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:textColor="@color/GERY"
        android:textSize="@dimen/size_text"
        android:layout_marginTop="@dimen/space_8"
        android:padding="@dimen/space_16"
        android:paddingLeft="@dimen/space_16"
        android:paddingBottom="12dp"
        android:paddingTop="12dp"
        android:background="@color/MORE_LIGHT_GERY"
        android:hint="@string/amount"
        app:layout_constraintTop_toBottomOf="@id/send_tv_amount"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/DEEP_GERY"
        android:layout_marginEnd="@dimen/space_16"
        app:layout_constraintRight_toRightOf="@id/send_et_amount"
        android:textSize="@dimen/size_text"
        app:layout_constraintBottom_toBottomOf="@id/send_et_amount"
        app:layout_constraintTop_toTopOf="@id/send_et_amount"
        android:text="@string/app_name"/>

    <TextView
        android:id="@+id/send_tv_available"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_8"
        app:layout_constraintTop_toBottomOf="@id/send_et_amount"
        android:layout_marginEnd="@dimen/space_16"
        android:textSize="@dimen/size_tip"
        android:textColor="@color/colorPrimary"
        android:text="Available 0 XDAG"
        app:layout_constraintRight_toRightOf="parent"/>

    <Button
        android:id="@+id/send_btn_xdag"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="@color/WHITE"
        android:background="@color/colorPrimary"
        android:text="@string/send_xdag"
        android:textSize="@dimen/size_title"
        android:layout_marginTop="50dp"
        android:layout_marginStart="@dimen/space_16"
        android:layout_marginEnd="@dimen/space_16"
        app:layout_constraintTop_toBottomOf="@id/send_et_amount"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>

</android.support.constraint.ConstraintLayout>