<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:background="#ffffff"
    android:orientation="vertical">

        <LinearLayout
            android:id="@+id/ll_pwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#ffffff"
            android:orientation="vertical"
            android:paddingLeft="20dp"
            android:paddingRight="20dp">

            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:textSize="15sp"
                android:text="@string/please_input_password"
                android:gravity="center_horizontal"
                android:textColor="#000"/>

            <android.support.design.widget.TextInputLayout
                app:errorEnabled="false"
                app:hintEnabled="true"
                app:hintAnimationEnabled="true"
                app:passwordToggleEnabled="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
                <EditText
                    android:id="@+id/input_password"
                    android:hint="@string/please_input_password"
                    android:imeActionLabel="Create"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:singleLine="true"
                    android:maxLines="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_action"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <Button
                android:id="@+id/ok_action"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/create_wallet_btn_bg_selector"
                android:padding="5dp"
                android:text="@string/ensure"
                android:textColor="#ffffff"
                android:textSize="12sp" />

            <Button
                android:id="@+id/cancel_action"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/create_wallet_btn_bg_selector"
                android:padding="5dp"
                android:text="@string/cancel"
                android:textColor="#ffffff"
                android:textSize="12sp" />

        </LinearLayout>
</LinearLayout>